[package]
name = "spread_sheet"
version = "0.1.0"
edition = "2021"

[dependencies]
urlencoding = "2.1.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yup-oauth2 = "5.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
